# CG-Vulkan

./: CMakeLists.txt  README.md  gpt_midi_frame_level_colab.ipynb  script.py  вывод без скайбокса  старый код.txt
assets/: фке
include/veekay/: application.hpp  graphics.hpp  input.hpp  types.hpp  veekay.hpp
lab1/: CMakeLists.txt  main.cpp
lab1/include/lab1/: app.hpp
lab1/shaders/: cylinder.frag  cylinder.vert  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
shaders/: shader.frag  shader.vert  shadow.vert
source/: graphics.cpp  input.cpp  oldveekay.cpp  veekay.cpp
testbed/: CMakeLists.txt  main.cpp
